Network: Fix stuck requests because of drain race condition Fix releasing transport on drain

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1451,7 +1451,7 @@ hr {
 .tgico-reply_filled:before,
 .tgico-forward_filled:before {
   font-size: 20px !important;
-  padding: 0 2px;
+  padding: 2px;
 }
 
 // ! TEMPORARY
